# VRP-HTW

./: README.md
OriginalCode/: CMakeLists.txt  README.md
OriginalCode/include/: ConshdlrNVehicle.h  ConshdlrSRC.h  branchingrule_arcflow.h  branchingrule_dayvar.h  label.h  model_data.h  pricer_vrp.h  probdata_vrp.h
OriginalCode/src/: ConshdlrKPC.cpp  ConshdlrNVehicle.cpp  ConshdlrSRC.cpp  branchingrule_arcflow.cpp  branchingrule_dayvar.cpp  local_search_pricing.cpp  model_data.cpp  probdata_vrp.cpp
RCFC/: .gitignore  CMakeLists.txt  README.md
RCFC/include/: ConshdlrCPC.h  ConshdlrKPC.h  ConshdlrRCFC.h  label2.h  labeling_algorithm_vrp.h  labellist.h  pricer_vrp.h  probdata_vrp.h  prop_varfixing.h
RCFC/src/: ConshdlrCPC.cpp  ConshdlrDayVar.cpp  ConshdlrKPC.cpp  ConshdlrRCFC.cpp  ConshdlrSRC.cpp  branchingrule_arcflow.cpp  branchingrule_dayvar.cpp  eventhdlr_nodeInit.cpp  label2.cpp  labeling_algorithm_vrp.cpp  main_vrp.cpp  pricer_vrp.cpp  probdata_vrp.cpp  prop_varfixing.cpp  tools_vrp.cpp
include/: ConshdlrKPC.h  ConshdlrSRC.h  ConshdlrVehicle.h  ConshdlrVehicleArc.h  branchingrule_vehiclearc.h  labeling_algorithm_vrp.h  labellist.h  pricer_vrp.h  var_tools.h
instances/sdvrptw/: pr03_n100.json  pr03_n20.json  pr03_n30.json  pr03_n40.json  pr03_n50.json  pr03_n60.json  pr03_n70.json  pr03_n80.json  pr03_n90.json  pr04_n100.json  pr04_n20.json  pr04_n30.json  pr04_n40.json  pr04_n50.json  pr04_n60.json  pr04_n70.json  pr04_n80.json  pr04_n90.json  pr05_n100.json  pr05_n20.json  pr05_n30.json  pr05_n40.json  pr05_n50.json  pr05_n60.json  pr05_n70.json  pr05_n80.json  pr05_n90.json  pr08_n100.json  pr08_n20.json  pr08_n30.json  pr08_n40.json  pr08_n50.json  pr08_n60.json  pr08_n70.json  pr08_n80.json  pr08_n90.json  pr09_n100.json  pr09_n20.json  pr09_n30.json  pr09_n40.json  (+14 more)
instances/sdvrptw_sol/: pr03_n100.sol  (+57 more)
src/: ConshdlrKPC.cpp  ConshdlrVehicle.cpp  ConshdlrVehicleArc.cpp  branchingrule_vehiclearc.cpp  label.cpp  labeling_algorithm_vrp.cpp  labellist.cpp  main_vrp.cpp  pricer_vrp.cpp  var_tools.cpp
(+244 files in other folders)
